[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/themes/panels/panel_border.tres" type="StyleBox" id=1]
[ext_resource path="res://src/objects/ui/windows/ImageFileWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/themes/fonts/TitleLabelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/objects/ui/buttons/PortraitUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/objects/ui/windows/CharacterWindow.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/objects/ui/misc/DialogBoxUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/themes/DefaultTheme.tres" type="Theme" id=7]
[ext_resource path="res://src/scenes/Edit.gd" type="Script" id=8]
[ext_resource path="res://src/objects/ui/buttons/OptionsButton.tscn" type="PackedScene" id=9]

[sub_resource type="InputEventKey" id=18]
control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="InputEventKey" id=20]
control = true
command = true
scancode = 88

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 20 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.117647, 0.117647, 0.117647, 0.862745 )

[node name="Edit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.109804, 0.145098, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="OptionsButton" parent="." instance=ExtResource( 9 )]

[node name="TextEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -338.0
margin_top = -170.0
margin_right = 338.0
margin_bottom = -30.0
wrap_enabled = true

[node name="Actions" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -17.0
margin_bottom = 48.0
custom_constants/separation = 30
alignment = 1

[node name="Talk" type="Button" parent="Actions"]
margin_left = 285.0
margin_right = 385.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 65 )
hint_tooltip = "Permite iniciar ou continuar o diálogo com base do conteúdo acima"
shortcut = SubResource( 19 )
text = "Falar"

[node name="Border" type="Panel" parent="Actions/Talk"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )

[node name="Clear" type="Button" parent="Actions"]
margin_left = 415.0
margin_right = 515.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 65 )
hint_tooltip = "Limpa o conteúdo e o diálogo"
shortcut = SubResource( 21 )
text = "Limpar"

[node name="Border" type="Panel" parent="Actions/Clear"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = ExtResource( 1 )

[node name="Dialog" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 101.0
margin_top = -172.0
margin_right = -94.0
margin_bottom = -32.0
rect_min_size = Vector2( 0, 64 )

[node name="Portrait" parent="Dialog" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.5
margin_top = -64.0
margin_right = -155.5
clickable = true

[node name="DialogBox" parent="Dialog" instance=ExtResource( 6 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.5
margin_top = -64.0
margin_right = 284.5
box_size = 400.0

[node name="CharacterSelect" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CharacterSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 17 )

[node name="Title" type="Label" parent="CharacterSelect"]
anchor_right = 1.0
margin_top = 61.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 3 )
text = "Selecione o personagem"
align = 1
valign = 1

[node name="Window" parent="CharacterSelect" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -141.0
margin_right = 272.0
margin_bottom = 141.0
portrait_path = NodePath("../../Dialog/Portrait")
dialog_box_path = NodePath("../../Dialog/DialogBox")
file_window_path = NodePath("../FileDialog")

[node name="FileDialog" parent="CharacterSelect" instance=ExtResource( 2 )]
portrait_path = NodePath("../../Dialog/Portrait")

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Actions/Talk" to="." method="_on_Talk_pressed"]
[connection signal="pressed" from="Actions/Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Dialog/Portrait" to="." method="_on_Portrait_pressed"]
[connection signal="texture_changed" from="Dialog/Portrait" to="." method="_on_Portrait_texture_changed"]
[connection signal="popup_hide" from="CharacterSelect/Window" to="." method="_on_Window_popup_hide"]
[connection signal="popup_hide" from="CharacterSelect/FileDialog" to="." method="_on_FileDialog_popup_hide"]
